Added corrections to property file (in part of drivers path), to WebDriverFactory ((in part of private constructor)

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,17 +4,17 @@ home.page.url=https://172.25.3.119/
 # browsers configuration:
 remote=false
 
-browser=firefox
+browser=chrome
 version=47
-platform=windows
+platform=firefox
 
 chrome.driver_mac.name=webdriver.chrome.driver
 chrome.driver.name=webdriver.chrome.driver
 ie.driver.name=webdriver.ie.driver
 
-chrome.driver_mac.path=src//main//resources//drivers//chromedriver_mac
-chrome.driver.path=src//main//resources//drivers//chromedriver
-ie.driver.path=src//main//resources//drivers//IEDriverServer.exe
+chrome.driver_mac.path=src/main/resources/drivers/chromedriver_mac
+chrome.driver.path=src/main/resources/drivers/chromedriver.exe
+ie.driver.path=src/main/resources/drivers/IEDriverServer.exe
 
 remote.webDriver.url=http://localhost:4444/wd/hub
 
