EIDR-120 Allure Test Report

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,7 +6,7 @@ remote=false
 
 browser=chrome
 version=47
-platform=firefox
+platform=mac
 
 chrome.driver_mac.name=webdriver.chrome.driver
 chrome.driver.name=webdriver.chrome.driver
