--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,9 +4,9 @@ home.page.url=https://172.25.3.119/
 # browsers configuration:
 remote=false
 
-browser=chrome
+browser=firefox
 version=47
-platform=firefox
+platform=windows
 
 chrome.driver_mac.name=webdriver.chrome.driver
 chrome.driver.name=webdriver.chrome.driver
