EIDR-127 - Create valid user login test

--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,7 @@
 						</property>
 						<property>
 							<name>listener</name>
-							<value>util.SimplyTestListenerAdapter</value>
+							<value>util.Listener</value>
 						</property>
 					</properties>
 					<suiteXmlFiles>
