--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -19,5 +19,5 @@ ie.driver.path=src/main/resources/drivers/IEDriverServer.exe
 remote.webDriver.url=http://localhost:4444/wd/hub
 
 # valid account credentials:
-user.name=insiderStage
-user.pass=Q!W@E#r4t5y6
+user.name=null
+user.pass=null
