--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -1,13 +1,13 @@
 Web: Eleks Insider 
 OSname: Windows 10
 OSversion: 10.0
-OSbyte: x86
-HostName: Halyna.Leshchyshyn
-TestStarted:07-3-2017 02:26:55
-HostAddress: 172.25.24.92
-HostName: ws-lv-cp2258
+OSbyte: amd64
+HostName: kostiantyn.sichenko
+TestStarted:07-3-2017 03:55:50
+HostAddress: 172.25.24.155
+HostName: WS-LV-CP1549
 QAAutomationTesters: Halyna Leshchyshyn, Kostyantin Sichenko
-CanonicalHostName: ws-lv-cp2258.eleks-software.local
-LocalHost: ws-lv-cp2258/172.25.24.92
+CanonicalHostName: WS-LV-CP1549.eleks-software.local
+LocalHost: WS-LV-CP1549/172.25.24.155
 LoopbackAddress: localhost/127.0.0.1
-JavaVersion: 1.8.0_111-b14
+JavaVersion: 1.8.0_121-b13
