EIDR-128 - Create log out test

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -19,5 +19,5 @@ ie.driver.path=src/main/resources/drivers/IEDriverServer.exe
 remote.webDriver.url=http://localhost:4444/wd/hub
 
 # valid account credentials:
-user.name=null
-user.pass=null
+user.name=insider.stage
+user.pass=5LZXgFY6?9
