EIDR-131 Create invalid user login test

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,7 +4,7 @@ home.page.url=https://172.25.3.119/
 # browsers configuration:
 remote=false
 
-browser=firefox
+browser=chrome
 version=47
 platform=windows
 
